# reactorlib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  utility.sh
docker/: Dockerfile
libreactor/: event_handler.h  handler_map.h  reactor.cpp  reactor.h  utils.h
unit-tests/: CMakeLists.txt  test_demux_dispatch.cpp  test_reactor.cpp
